[tool.poetry]
name = "ksnyk"
version = "0.1.0"
description = "Utilities for using Snyk with Kubernetes"
license = "Apache-2.0"
readme = "README.md"
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]

include = ["vulnerabily.yaml"]

[tool.poetry.dependencies]
python = "^3.7"
pysnyk = "^0.1.2"
click = "^7.0"
kubernetes = "^10.0"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.7"
pytest-isort = "^0.3.1"
pytest-cov = "^2.8"

[tool.poetry.scripts]
ksnyk = "main:cli"
kubectl-snyk = "main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
